--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ pytest-flask = "^1.3.0"
 cloudinary = "^1.40.0"
 
 
+[tool.poetry.group.dev.dependencies]
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
