init mailer feature

--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ CLOUDINARY_URL=
 
 SMTP_SERVER_ADDRESS=
 SMTP_SERVER_PORT=
-SMTP_SECURE=
+SMTP_START_TLS=
 SMTP_USERNAME=
 SMTP_PASSWORD=
 EMAIL_SUBJECT_PREFIX=
