--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ cloudinary = "^1.40.0"
 
 
 [tool.poetry.group.dev.dependencies]
+pytest-mock = "^3.14.0"
 
 [build-system]
 requires = ["poetry-core"]
