--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ flask-peewee = "^3.0.6"
 sqlalchemy = "^2.0.30"
 pytest-flask = "^1.3.0"
 cloudinary = "^1.40.0"
+pyjwt = "^2.8.0"
 
 
 [tool.poetry.group.dev.dependencies]
