--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ sqlalchemy = "^2.0.30"
 pytest-flask = "^1.3.0"
 cloudinary = "^1.40.0"
 pyjwt = "^2.8.0"
+flask-cors = "^4.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
